# -bot

./: .MANIFEST.txt  .env.example  .gitignore  MANIFEST_I_LINE_MVP_STABLE_20260607.json  MANIFEST_M2_1_EXPLICIT_MEMORY_HANDLER_20260604.txt  MANIFEST_M2_2_A3_1_CONTEXT_FILTER_LOGGING_FIX_20260604.txt  MANIFEST_M2_2_A3_CONTEXTUAL_HANDLER_INTEGRATION_20260604.txt  MANIFEST_M2_2_B2B_ASYNC_TOPIC_BOUNDARY_INTEGRATED_20260604.txt  MANIFEST_M2_2_EXPLICIT_CONTEXT_MEMORY_STABLE_20260604.txt  MANIFEST_M2_EXPLICIT_MEMORY_ROUTER_V1_20260604.txt  MANIFEST_MEMORY_M1_C3_1_STABLE_20260604.txt  PATCH_NOTES_current_session_smoke_reload.md  PATCH_NOTES_phase6a_atbot_decision_trace.md  PATCH_NOTES_phase6a_decision_trace_loguru_fix.md  PATCH_NOTES_phase6c_owner_command_tighten.md  PATCH_NOTES_send_stream_sse_guardrails.md  PROJECT_PROGRESS.md  README.md  README_C3_1_STRUCTURED_MEMORY_QUERY_ROUTER_20260604.md  README_C4_SUBJECT_GUARD_ON_M1_20260604.md  README_M1_PROVIDER_ON_C4_20260604.md  README_M2_1_EXPLICIT_MEMORY_HANDLER_20260604.md  README_M2_2_A3_1_CONTEXT_FILTER_LOGGING_FIX_20260604.md  README_M2_2_A3_CONTEXTUAL_HANDLER_INTEGRATION_20260604.md  README_M2_2_B2B3_REAL_TOPIC_BOUNDARY_GRAY_RUNBOOK_20260605.md  README_M2_2_B2B_ASYNC_TOPIC_BOUNDARY_INTEGRATED_20260604.md  README_M2_2_EXPLICIT_CONTEXT_MEMORY_STABLE_20260604.md  README_M2_EXPLICIT_MEMORY_ROUTER_V1_20260604.md  README_MEMORY_M1_C3_1_STABLE_20260604.md  bot.py  current_task.md  current_task_result.md  pyproject.toml  yangyang_phaseC_pipeline_20260603.MANIFEST.txt
deploy/: host_deploy_checklist.md  (+1 more)
docs/: host_handoff_package.md  (+33 more)
(+195 files in other folders)
